--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.15.0",
   "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
   "dependencies": {
-    "cordova-android": "^8.1.0",
+    "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.3",
@@ -14,14 +14,14 @@
     "cordova-plugin-filepath": "^1.5.8",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^2.5.3",
+    "cordova-plugin-ionic-webview": "^4.2.0",
     "cordova-plugin-itunesfilesharing": "0.0.2",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-zip": "^3.1.0",
-    "cordova-sqlite-storage": "^3.4.1",
+    "cordova-sqlite-storage": "^5.0.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
@@ -34,7 +34,6 @@
     "@ionic/v1-toolkit": "^3.1.2",
     "angular-mocks": "^1.7.9",
     "bower": "^1.8.8",
-    "cordova-sqlite-evcore-extbuild-free": "^0.12.0",
     "eslint": "^6.8.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^0.12.0",
@@ -63,14 +62,15 @@
       "browser"
     ],
     "plugins": {
-      "cordova-plugin-camera": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-device": {},
       "cordova-plugin-device-motion": {},
       "cordova-plugin-device-orientation": {},
       "cordova-plugin-file": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-geolocation": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-ionic-webview": {
@@ -80,11 +80,10 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
-      "cordova-sqlite-storage": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-zip": {},
-      "org.strabospot.clipboard": {},
-      "cordova-sqlite-evcore-extbuild-free": {}
+      "cordova-sqlite-storage": {},
+      "org.strabospot.clipboard": {}
     }
   }
 }
