--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-geolocation": "4.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "2.5.3",
@@ -71,6 +72,7 @@
       "cordova-plugin-file": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-file-transfer": {},
+      "cordova-plugin-geolocation": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-ionic-webview": {},
@@ -81,7 +83,7 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-zip": {},
       "cordova-sqlite-storage": {},
-      "org.strabospot.clipboard": {},
+      "org.strabospot.clipboard": {}
     }
   }
 }
