--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.17.1",
   "description": "StraboSpot is a cross-platform app for geologic field data acquisition.",
   "dependencies": {
+    "@ionic-native/file-chooser": "^5.23.0",
+    "@ionic-native/file-opener": "^5.23.0",
+    "@ionic-native/file-picker": "^5.23.0",
     "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.1.0",
@@ -10,8 +13,12 @@
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-device-orientation": "^2.0.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.0",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-filepicker": "^1.1.6",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-geolocation": "4.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -83,7 +90,12 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-zip": {},
       "cordova-sqlite-storage": {},
-      "org.strabospot.clipboard": {}
+      "org.strabospot.clipboard": {},
+      "cordova-plugin-filepicker": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     }
   }
 }
